Closed
Bug 623277
Opened 15 years ago
Closed 15 years ago
Failed to build with --disable-methodjit
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: adrake, Assigned: adrake)
References
Details
(Whiteboard: [fixed-in-tracemonkey])
Attachments
(1 file, 2 obsolete files)
|
2.82 KB,
patch
|
sfink
:
review+
|
Details | Diff | Splinter Review |
/home/adrake/src/tm/js/src/jsinterpinlines.h: In member function ‘bool js::InvokeSessionGuard::invoke(JSContext*) const’:
/home/adrake/src/tm/js/src/jsinterpinlines.h:589:43: error: ‘struct JSScript’ has no member named ‘getJIT’
Patch forthcoming.
| Assignee | ||
Comment 1•15 years ago
|
||
Adds a ifdef JS_METHODJIT around the condition involving getJIT.
Comment 2•15 years ago
|
||
shell/js.cpp needs a similar patch, so here is a unified one. David, would you be willing to review this, or tell me who would?
Attachment #502317 -
Flags: review?(dmandelin)
Updated•15 years ago
|
Attachment #502317 -
Flags: review?(dmandelin) → review+
Updated•15 years ago
|
Attachment #501381 -
Attachment is obsolete: true
Comment 3•15 years ago
|
||
I'm going to use this bug for all build failures with --disable-methodjit, since we have 3 of them right now that I know of and various parts of them have already been fixed.
The patch in this bug is nearly all that's left, although part of another of adrake's patches had a warning fix, and the patch attached to this bug has Windows line endings mixed in, so I'll attach a new one and dupe the other bugs here.
Summary: Failed to build jsapi.cpp with --disable-methodjit → Failed to build with --disable-methodjit
Comment 6•15 years ago
|
||
Darn. No simple way to carry over r=dmandelin?
Attachment #502317 -
Attachment is obsolete: true
Attachment #503691 -
Flags: review+
Comment 8•15 years ago
|
||
Authorship got mixed up, but:
http://hg.mozilla.org/tracemonkey/rev/7372dac81910
Whiteboard: [fixed-in-tracemonkey]
Comment 9•15 years ago
|
||
cdleary-bot mozilla-central merge info:
http://hg.mozilla.org/mozilla-central/rev/7372dac81910
Updated•15 years ago
|
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•