Bug 623277 - Failed to build with --disable-methodjit  r=dmandelin, a=NPOTB